# SnowGuard-Logs

./: README.md  pyproject.toml
src/: LocateSource.py  QueryParser.py  utils.py
tests/: conftest.py  test_query_parser.py
